# catdog-ai-deploy

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  main.py  pyproject.toml  train_model.py
static/: index.html  script.js  style.css
